Phase 2 — motor force port (F8-F10) on device — BORDERLINE PASS
Per-step myosin cross-bridge force (F8 spring, F9/F10 alignment torques) ported
to two device kernels (motorForceKernel per Myosin, segMotorForceKernel per
FilSegment via CSR walk). Cheap probe (HeldBoundMotorDiag, 4 cases) matches
CPU exactly. Motor-isolation paired ensemble N=20 shows meanBoundMotors clean
(paired t=-0.25) and bindEvents/glidingVelocity at the ~2σ border (t=-2.13,
-2.12) — hypothesised 1-step release-decision lag, not a formula bug.
Port committed at default device; BOA_DIAG_CPU_MOTOR=1 is the A/B lever.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>